log/build_2025-08-16_07-07-54/ht_core/stderr.log
  File "/home/user/high_tide_ws/install/ht_core/lib/python3.10/site-packages/ht_core/mission_node.py", line 25
    "alpha": alpha_mission,
    ^^^^^^^
SyntaxError: invalid syntax

